--- a/package.json
+++ b/package.json
@@ -1,23 +1,9 @@
 
 {
-    "name": "Robin",
+    "name": "Robert_James_Website",
     "main": "index.html",
     "icon": "assets/img/icons/icon.icns",
-    "description": "Robin is light weight award winning web browser. It is designed for low-end machines and for Teachers and Parents to block website and terms.",
-    "version": "0.6.1",
-    "window": {
-        "title": "Robin",
-        "frame": true,
-        "toolbar": false,
-        "width": 850,
-        "height": 500,
-        "position": "mouse",
-        "min_width": 850,
-        "min_height": 500
-    },
-    "webkit": {
-        "plugin": true
-    },
+    "description": "",
     "devDependencies": {
         "gulp": "*",
         "gulp-less": "*",
